--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "[![Actions Status](https://github.com/bdcry/frontend-project-12/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/bdcry/frontend-project-12/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd frontend && npm install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
