--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hexlet/chat-server": "^2.0.4",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
-    "react-bootstrap": "^2.10.6"
+    "react-bootstrap": "^2.10.6",
+    "yup": "^1.4.0"
   }
 }
