--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@hexlet/chat-server": "^2.0.4",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "i18next": "^24.0.5",
     "react-bootstrap": "^2.10.6",
+    "react-i18next": "^15.1.3",
     "yup": "^1.4.0"
   }
 }
