--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next": "^24.0.5",
     "react-bootstrap": "^2.10.6",
     "react-i18next": "^15.1.3",
+    "react-router-dom": "^7.0.2",
     "yup": "^1.4.0"
   }
 }
