--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/bdcry/frontend-project-12#readme",
   "dependencies": {
     "@hexlet/chat-server": "^2.0.4",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "i18next": "^24.0.5",
