--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/bdcry/frontend-project-12#readme",
   "dependencies": {
     "@hexlet/chat-server": "^2.0.4",
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "i18next": "^24.0.5",
     "react-bootstrap": "^2.10.6",
     "react-i18next": "^15.1.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
     "yup": "^1.4.0"
   }
