--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "devDependencies": {
     "@eslint/create-config": "^1.4.0",
     "@eslint/eslintrc": "^3.2.0",
