--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "engines": {
+    "npm": "9.6.7",
+    "node": "18.x"
   },
   "devDependencies": {
     "@eslint/create-config": "^1.4.0",
