--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@hexlet/chat-server": "^2.0.4",
+    "i18next": "^24.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
-  "engines": {
-    "npm": "9.6.7",
-    "node": "18.x"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "devDependencies": {
     "@eslint/create-config": "^1.4.0",
