--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@hexlet/chat-server": "^2.0.4",
     "i18next": "^24.0.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.3"
   },
   "eslintConfig": {
     "extends": [
