--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@hexlet/chat-server": "^2.0.4",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "formik": "^2.4.6",
     "i18next": "^24.0.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.1.3"
+    "react-i18next": "^15.1.3",
+    "react-router-dom": "^7.0.2"
   },
   "eslintConfig": {
     "extends": [
