--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.3",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "socket.io-client": "^4.8.1"
   },
   "eslintConfig": {
     "extends": [
