--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -29,5 +29,10 @@ rules:
   functional/immutable-data: 0
   functional/functional-parameters: 0
   functional/no-try-statements: 0
+  functional/no-throw-statements: 0
   functional/no-return-void: 0
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
   react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
+  testing-library/no-debug: 0
+  react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
+  no-param-reassign: 0
