--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.3",
     "react-router-dom": "^7.0.2",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "eslintConfig": {
