--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-i18next": "^15.1.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
+    "socket.io": "^4.5.1",
     "yup": "^1.4.0"
   }
 }
