--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-i18next": "^15.1.3",
     "react-router-dom": "^7.0.2",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "yup": "^1.5.0"
   },
   "eslintConfig": {
     "extends": [
