--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,13 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
-    "i18next": "^24.0.5",
+    "i18next": "^24.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.1.3",
+    "react-i18next": "^15.1.4",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^10.0.6",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "yup": "^1.5.0"
