--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hexlet/chat-server": "^2.0.4",
     "@reduxjs/toolkit": "^2.5.0",
+    "@rollbar/react": "^0.12.0-beta",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
@@ -24,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
+    "rollbar": "^2.26.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "yup": "^1.5.0"
