--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -14,9 +14,15 @@ parserOptions:
   ecmaVersion: latest
   sourceType: module
 
+settings:
+  react:
+    version: "detect"
+
 plugins:
   - react
+  - react-hooks
   - functional
+  - react-refresh
 
 rules:
   import/extensions: 0
@@ -31,8 +37,22 @@ rules:
   functional/no-try-statements: 0
   functional/no-throw-statements: 0
   functional/no-return-void: 0
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
-  react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
+  no-underscore-dangle:
+    - 2
+    - allow:
+        - __filename
+        - __dirname
+  react/function-component-definition:
+    - 2
+    - namedComponents: "arrow-function"
   testing-library/no-debug: 0
-  react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
+  react/jsx-filename-extension:
+    - 1
+    - extensions:
+        - .js
+        - .jsx
   no-param-reassign: 0
+  react/jsx-no-target-blank: "off"
+  react-refresh/only-export-components:
+    - "warn"
+    - allowConstantExport: true
