--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@eslint/js": "^9.17.0",
     "@hexlet/chat-server": "^2.0.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@rollbar/react": "^0.12.0-beta",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-functional": "^6.5.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "formik": "^2.4.6",
     "i18next": "^24.1.0",
     "leo-profanity": "^1.7.0",
@@ -28,30 +36,12 @@
     "rollbar": "^2.26.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "vite": "^6.0.3",
     "yup": "^1.5.0"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "devDependencies": {
-    "@eslint/create-config": "^1.4.0",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.16.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-functional": "^6.6.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.13.0",
-    "vite": "^6.0.1"
+    "globals": "^15.13.0"
   }
 }
