--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.4.6",
     "i18next": "^24.1.0",
     "leo-profanity": "^1.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
