--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/bdcry/frontend-project-12/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/bdcry/frontend-project-12/actions)",
+  "description": "Chat Slack",
   "main": "index.js",
   "scripts": {
     "postinstall": "cd frontend && npm ci",
@@ -19,17 +19,6 @@
   },
   "homepage": "https://github.com/bdcry/frontend-project-12#readme",
   "dependencies": {
-    "@hexlet/chat-server": "^2.0.4",
-    "@reduxjs/toolkit": "^2.4.0",
-    "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
-    "formik": "^2.4.6",
-    "i18next": "^24.0.5",
-    "react-bootstrap": "^2.10.6",
-    "react-i18next": "^15.1.3",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.2",
-    "socket.io": "^4.5.1",
-    "yup": "^1.4.0"
+    "@hexlet/chat-server": "^2.0.4"
   }
 }
