--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "npx eslint --ext js,jsx --no-eslintrc --config .eslintrc.yml .",
     "preview": "vite preview"
   },
   "dependencies": {
