--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,6 @@
     "bootstrap": "^5.3.3",
     "eslint": "^8.57.0",
     "eslint-plugin-functional": "^6.5.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.16",
     "formik": "^2.4.6",
@@ -43,6 +41,10 @@
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0"
   }
 }
